--- a/at.kabelka.test.sessionlistener/pom.xml
+++ b/at.kabelka.test.sessionlistener/pom.xml
@@ -15,8 +15,8 @@
  
   <modules>
     <module>../at.kabelka.test.sessionlistener.ear</module>
-  	<module>../at.kabelka.test.sessionlistener.rest</module>
-  	<module>../at.kabelka.test.sessionlistener.web</module>
+  	<module>../at.kabelka.test.sessionlistener.war.ui</module>
+  	<module>../at.kabelka.test.sessionlistener.war.ajax</module>
   </modules>
   
   <repositories>
@@ -54,13 +54,13 @@
 		</dependency>
 		<dependency>
 			<groupId>at.kabelka</groupId>
-			<artifactId>sessionlistener-rest</artifactId>
+			<artifactId>sessionlistener-war-ui</artifactId>
 			<version>0.1</version>
 			<type>war</type>
 		</dependency>
 		<dependency>
 			<groupId>at.kabelka</groupId>
-			<artifactId>sessionlistener-web</artifactId>
+			<artifactId>sessionlistener-war-ajax</artifactId>
 			<version>0.1</version>
 			<type>war</type>
 		</dependency>
